--- a/Loop.xcconfig
+++ b/Loop.xcconfig
@@ -15,6 +15,23 @@ LOOP_MARKETING_VERSION = 2.3.0
 
 APPICON_NAME = AppIcon
 
-// Optional workspace configuration overrides
-#include? "../LoopConfigOverride.xcconfig"
+// Code signing and provisioning [DEFAULT]
+LOOP_CODE_SIGN_IDENTITY_DEBUG = Apple Development
+LOOP_CODE_SIGN_IDENTITY_RELEASE = Apple Development
+LOOP_CODE_SIGN_STYLE = Automatic
+LOOP_DEVELOPMENT_TEAM =
+LOOP_PROVISIONING_PROFILE_SPECIFIER_DEBUG =
+LOOP_PROVISIONING_PROFILE_SPECIFIER_STATUS_EXTENSION_DEBUG =
+LOOP_PROVISIONING_PROFILE_SPECIFIER_WATCHAPP_DEBUG =
+LOOP_PROVISIONING_PROFILE_SPECIFIER_WATCHAPP_EXTENSION_DEBUG =
+LOOP_PROVISIONING_PROFILE_SPECIFIER_RELEASE =
+LOOP_PROVISIONING_PROFILE_SPECIFIER_STATUS_EXTENSION_RELEASE =
+LOOP_PROVISIONING_PROFILE_SPECIFIER_WATCHAPP_RELEASE =
+LOOP_PROVISIONING_PROFILE_SPECIFIER_WATCHAPP_EXTENSION_RELEASE =
 
+// Min iOS Version [DEFAULT]
+IPHONEOS_DEPLOYMENT_TARGET = 14.1
+
+// Optional workspace configuration overrides
+#include? "LoopOverride.xcconfig"
+#include? "../LoopConfigOverride.xcconfig"
