--- a/Loop.xcconfig
+++ b/Loop.xcconfig
@@ -9,7 +9,7 @@
 // This is automatically disambiguated by development team, but you may choose to change this to
 // support running multiple apps simultaneously.
 MAIN_APP_BUNDLE_IDENTIFIER = com.${DEVELOPMENT_TEAM}.loopkit
-MAIN_APP_DISPLAY_NAME = FreeAPS
+MAIN_APP_DISPLAY_NAME = Loop
 
 LOOP_MARKETING_VERSION = 2.3.0
 
