Add label to Min Basal Rate settings section

--- a/Settings.bundle/Root.plist
+++ b/Settings.bundle/Root.plist
@@ -17,6 +17,12 @@
 			<false/>
 		</dict>
 		<dict>
+		<key>Type</key>
+			<string>PSGroupSpecifier</string>
+			<key>Title</key>
+			<string>Min Basal Rate</string>
+		</dict>
+		<dict>
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
